--- a/less/project/ferret/style_fonts.less
+++ b/less/project/ferret/style_fonts.less
@@ -34,7 +34,19 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'OpenSansBold';
+    src: url('../fonts/OpenSans-Bold-webfont.eot');
+    src: url('../fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-Bold-webfont.woff') format('woff'),
+         url('../fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
+         url('../fonts/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 .font-light {font-family: 'OpenSansLight'; font-weight: normal;}
 .font-normal {font-family: 'OpenSansReg'; font-weight: normal;}
-.font-bold {font-family: 'OpenSansSemi'; font-weight: normal;}
+.font-semi {font-family: 'OpenSansSemi'; font-weight: normal;}
+.font-bold {font-family: 'OpenSansBold'; font-weight: normal;}
 .font-headline {font-family: 'OpenSansSemi'; font-weight: normal;}
