--- a/less/project/ferret/style_typography.less
+++ b/less/project/ferret/style_typography.less
@@ -28,6 +28,7 @@ span.headline {
 }
 .subheadline {
 	display: block;
+	.font-semi;
 	font-size: @headline-sub-headline-size;
 	color: @headline-sub-headline-color;
 }
