--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -24,8 +24,9 @@
 // Fonts
 @font-light: 'OpenSansLight';
 @font-normal: 'OpenSansReg';
-@font-bold: 'OpenSansSemi';
-@font-headline: 'OpenSansSemi';
+@font-semi: 'OpenSansSemi';
+@font-bold: 'OpenSansBold';
+@font-headline: 'OpenSansBold';
 
 
 // Colors
