--- a/less/project/project_styles.less
+++ b/less/project/project_styles.less
@@ -2,23 +2,43 @@
 
 
 /* JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT */
-pre {
-	display: block;
-	width: 100%;
-	border: 1px solid @light-gray;
-	padding: 10px;
-	.radius;
-	background: #f9f9f9;
+section {
+	padding: 20px 0;
+	border-bottom: 1px solid #e1e1e1;
+	margin-bottom: 20px;
 }
-code {
-	font-family: monospace;
-	font-size: 14px;
-	color: @blue;
-	span {
-		display: inline;
-		background: none; color: @blue;
-		&:hover {background: none; color: @blue;
+.row {
+	margin-bottom: 20px;
+	.row {
+		background: #acacac;
+	}
+	form {
+		.row {
+			background: none;
 		}
 	}
 }
-.logo {position: absolute; width: 131px; height: 71px;}
+span {
+	display: block;
+	.transition;
+	background: #e1e1e1;
+	&:hover {
+		color: #fff;
+		background: @dark;
+	}
+	&.headline {
+		color: @dark;
+		background: none;
+	}
+	&.logo {
+		position: absolute;
+		top: 5px;
+		left: 10px;
+		font-size: 24px;
+		.font-bold;
+		color: #fff;
+		text-transform: uppercase;
+		background: none;
+	}
+}
+/* END */
