--- a/less/project/ferret/style_buttons.less
+++ b/less/project/ferret/style_buttons.less
@@ -43,6 +43,7 @@
 	
 	
 	// Sizes
+	&.mini {font-size: @button-font-size - 4; line-height: @button-height - 18; padding: 0 @button-height / 4 + 2;}
 	&.small {font-size: @button-font-size - 2; line-height: @button-height - 10; padding: 0 @button-height / 2;}
 	&.large {font-size: @button-font-size + 2; line-height: @button-height + 10; padding: 0 @button-height;}
 	&.x-large {font-size: @button-font-size + 4; line-height: @button-height + 20; padding: 0 @button-height + 10;}
