--- a/less/project/ferret/style_lists.less
+++ b/less/project/ferret/style_lists.less
@@ -20,6 +20,7 @@ ul {
 			border-right: 1px solid @gray;
 			padding-right: 10px;
 			margin-left: 10px;
+			font-size: 80%;
 			&:first-child {margin: 0;}
 			&:last-child {padding: 0; border: 0;}
 		}
