--- a/less/project/ferret/style_mixins.less
+++ b/less/project/ferret/style_mixins.less
@@ -73,3 +73,11 @@
 .hide {display: none;}
 .striped {background-image: url(../images/bg_stripes.png); background-repeat: repeat;}
 section.first {margin-top: @first-section-margin;}
+
+
+// Media Queries
+@mobile: ~"(max-width: 599px)";
+@small-tablet: ~"(min-width: 600px) and (max-width: 767px)";
+@tablet: ~"(min-width: 768px) and (max-width: 959px)";
+@device: ~"(max-width: 959px)";
+@desktop: ~"(min-width: 960px)";
