--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -166,8 +166,8 @@
 // Tooltips
 @tooltip-bg: @dark;
 @tooltip-color: #fff;
-@tooltip-font: @font-normal;
-@tooltip-font-size: 80%;
+@tooltip-font: @font-semi;
+@tooltip-font-size: 85%;
 @tooltip-weight: normal;
 @tooltip-letter-spacing: 0;
 @tooltip-border-radius: 3px;
