--- a/less/project/ferret/style_mixins.less
+++ b/less/project/ferret/style_mixins.less
@@ -24,6 +24,39 @@
 .radius (@radius: 3px) {border-radius: @radius;}
 
 
+// Triangle
+.triangle-base() {
+    display: block;
+    width: 0;
+    height: 0;
+    content: '';
+}
+.triangle(@direction, @size, @color) when (@direction = up) {
+    .triangle-base();
+    border-left: @size solid transparent;
+    border-right: @size solid transparent;
+    border-bottom: @size solid @color;
+}
+.triangle(@direction, @size, @color) when (@direction = down) {
+    .triangle-base();
+    border-left: @size solid transparent;
+    border-right: @size solid transparent;
+    border-top: @size solid @color;
+}
+.triangle(@direction, @size, @color) when (@direction = left) {
+    .triangle-base();
+    border-top: @size solid transparent;
+    border-bottom: @size solid transparent;
+    border-right: @size solid @color;
+}
+.triangle(@direction, @size, @color) when (@direction = right) {
+    .triangle-base();
+    border-top: @size solid transparent;
+    border-bottom: @size solid transparent;
+    border-left: @size solid @color;
+}
+
+
 // Effects
 .shadow (@x: 0, @y: 2px, @blur: 3px, @color: rgba(0,0,0,0.1)) {
 	box-shadow: @arguments;
@@ -81,3 +114,4 @@ section.first {margin-top: @first-section-margin;}
 @tablet: ~"(min-width: 768px) and (max-width: 959px)";
 @device: ~"(max-width: 959px)";
 @desktop: ~"(min-width: 960px)";
+@retina: ~"(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
