--- a/less/project/ferret/style_base.less
+++ b/less/project/ferret/style_base.less
@@ -39,7 +39,7 @@ hr {
 	display: block;
 	border: 0;
 	height: 2px;
-	background: url(../images/hr_horizontal.png) repeat-x;
+	background: url(../images/ferret/hr_horizontal.png) repeat-x;
 	margin: 0 10px 40px;
 	padding: 0;
 	&.flush {margin: 0;}
