--- a/less/project/ferret/style_forms.less
+++ b/less/project/ferret/style_forms.less
@@ -26,8 +26,8 @@ select.inputfield {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	color: @placeholder-color;
-	background: @input-bg url(../images/bg_select_arrow.png) no-repeat right;
-	&:focus {background: @input-bg-focus url(../images/bg_select_arrow.png) no-repeat right;}
+	background: @input-bg url(../images/ferret/bg_select_arrow.png) no-repeat right;
+	&:focus {background: @input-bg-focus url(../images/ferret/bg_select_arrow.png) no-repeat right;}
 }
 textarea.inputfield {height: @input-textarea-height;}
 .checkbox, .radio-button {
