--- a/less/project/ferret/style_lists.less
+++ b/less/project/ferret/style_lists.less
@@ -36,6 +36,7 @@ ol {
 		letter-spacing: @base-letter-spacing;
 		&:last-child {margin-bottom: 0;}
 	}
+	&.with-spacing {margin-bottom: @paragraph-margin;}
 }
 dl {
 	font-size: @list-font-size;
@@ -48,4 +49,5 @@ dl {
 		margin-bottom: @list-item-margin-bottom;
 		&:last-child {margin-bottom: 0;}
 	}
+	&.with-spacing {margin-bottom: @paragraph-margin;}
 }
