--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -81,6 +81,7 @@
 @nav-bar-position: fixed;
 @nav-bar-bg: @dark;
 @nav-bar-height: 60px;
+@nav-position: right;
 @nav-spacing: 20px;
 @nav-font: @font-bold;
 @nav-font-size: 12px;
@@ -110,8 +111,8 @@
 @input-textarea-height: 120px;
 @input-checkbox-size: 15px; // Checkbox & Radio Buttons
 @input-checkbox-bg: #fff;
-@input-checkbox-checked: url(../images/bg_checkbox.png); // Chrome Only
-@input-radio-checked: url(../images/bg_radio_button.png); // Chrome Only
+@input-checkbox-checked: url(../images/ferret/bg_checkbox.png); // Chrome Only
+@input-radio-checked: url(../images/ferret/bg_radio_button.png); // Chrome Only
 @input-label-font-size: 12px;
 @placeholder-color: #898989;
 
@@ -184,4 +185,4 @@
 
 
 // Extras
-@striped: url(../images/bg_stripes.png);
+@striped: url(../images/ferret/bg_stripes.png);
