--- a/less/project/project_styles.less
+++ b/less/project/project_styles.less
@@ -9,6 +9,11 @@ section {
 }
 .row {
 	margin-bottom: 20px;
+	
+	// Media
+	@media @mobile {
+		margin-bottom: 0;
+	}
 	.row {
 		background: #acacac;
 	}
