--- a/less/project/ferret/style_buttons.less
+++ b/less/project/ferret/style_buttons.less
@@ -3,7 +3,7 @@
 /* Buttons */
 .button, a.button {
 	float: left;
-	padding: 0 @button-height - 10;
+	padding: 0 @button-height - 15;
 	color: @button-color;
 	font-family: @button-font;
 	font-weight: @button-font-weight;
@@ -45,12 +45,18 @@
 	// Sizes
 	&.mini {font-size: @button-font-size - 4; line-height: @button-height - 18; padding: 0 @button-height / 4 + 2;}
 	&.small {font-size: @button-font-size - 2; line-height: @button-height - 10; padding: 0 @button-height / 2;}
-	&.large {font-size: @button-font-size + 2; line-height: @button-height + 10; padding: 0 @button-height;}
-	&.x-large {font-size: @button-font-size + 4; line-height: @button-height + 20; padding: 0 @button-height + 10;}
+	&.large {font-size: @button-font-size + 2; line-height: @button-height + 10; padding: 0 @button-height + 5;}
+	&.x-large {font-size: @button-font-size + 4; line-height: @button-height + 20; padding: 0 @button-height;}
 	&.full-width {width: 100%; padding-left: 0; padding-right: 0; text-align: center;}
 	
 	
 	// Hover
 	&:hover {background-color: @button-hover; border-top: 1px solid @button-hover; color: @button-color;}
 	&.flat:hover {border: none;}
+}
+input[type='submit'].button {
+	height: @button-height;
+	&.small {height: @button-height - 10;}
+	&.large {height: @button-height + 10;}
+	&.x-large {height: @button-height + 20;}
 }
