--- a/less/project/ferret/style_fonts.less
+++ b/less/project/ferret/style_fonts.less
@@ -49,4 +49,4 @@
 .font-normal {font-family: 'OpenSansReg'; font-weight: normal;}
 .font-semi {font-family: 'OpenSansSemi'; font-weight: normal;}
 .font-bold {font-family: 'OpenSansBold'; font-weight: normal;}
-.font-headline {font-family: 'OpenSansSemi'; font-weight: normal;}
+.font-headline {font-family: 'OpenSansBold'; font-weight: normal;}
