--- a/less/project/ferret/style_mixins.less
+++ b/less/project/ferret/style_mixins.less
@@ -26,7 +26,7 @@
 
 // Triangle
 .triangle-base() {
-    display: block;
+    position: absolute;
     width: 0;
     height: 0;
     content: '';
@@ -66,11 +66,9 @@
 }
 .fade {
 	.transition;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   	filter: alpha(opacity=100);
   	opacity: 1.0;
   	&:hover {
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	  	filter: alpha(opacity=60);
 	  	opacity: 0.6;
 	}
@@ -104,7 +102,7 @@
 	user-select: none;
 }
 .hide {display: none;}
-.striped {background-image: url(../images/bg_stripes.png); background-repeat: repeat;}
+.striped {background-image: url(../images/ferret/bg_stripes.png); background-repeat: repeat;}
 section.first {margin-top: @first-section-margin;}
 
 
@@ -112,6 +110,9 @@ section.first {margin-top: @first-section-margin;}
 @mobile: ~"(max-width: 599px)";
 @small-tablet: ~"(min-width: 600px) and (max-width: 767px)";
 @tablet: ~"(min-width: 768px) and (max-width: 959px)";
+@all-tablet: ~"(min-width: 600px) and (max-width: 959px)";
 @device: ~"(max-width: 959px)";
-@desktop: ~"(min-width: 960px)";
+@desktop: ~"(min-width: 960px) and (max-width: 1599px)";
+@large-desktop: ~"(min-width: 1600px)";
+@all-desktop: ~"(min-width: 960px)";
 @retina: ~"(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
