modified less files

--- a/less/ferret.less
+++ b/less/ferret.less
@@ -32,12 +32,8 @@ Email: sstopnik@redventures.com
 @import "project/project_styles.less"; // Located in the Project Folder
 
 
-// Fancybox Styles
+// Fancybox Styles (Remove if Not Needed)
 @import "project/ferret/fancybox.less";
-
-
-// Responsive Override Styles
-@import "project/ferret/style_responsive.less";
 
 
 // Include this file ONLY if supporting IE6-7
