--- a/less/project/ferret/style_forms.less
+++ b/less/project/ferret/style_forms.less
@@ -20,16 +20,25 @@
     margin-bottom: @input-margin-bottom;
     &:hover {border-color: @input-border-hover;}
     &:focus {outline: none; border-color: @input-border-focus; background: @input-bg-focus;}
-    @media (max-width: 599px) {margin-bottom: 0;}
+    
+    select& {
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		color: @placeholder-color;
+		background: @input-bg url(../images/ferret/bg_select_arrow.png) no-repeat right;
+		
+		&:focus {background: @input-bg-focus url(../images/ferret/bg_select_arrow.png) no-repeat right;}    
+    }
+    
+    textarea& {
+	    height: @input-textarea-height;
+    }
+    
+    // Media
+    @media @mobile {
+    	margin-bottom: 0;
+    }
 }
-select.inputfield {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	color: @placeholder-color;
-	background: @input-bg url(../images/ferret/bg_select_arrow.png) no-repeat right;
-	&:focus {background: @input-bg-focus url(../images/ferret/bg_select_arrow.png) no-repeat right;}
-}
-textarea.inputfield {height: @input-textarea-height;}
 .checkbox, .radio-button {
 	float: left;
 	width: @input-checkbox-size;
@@ -39,15 +48,22 @@ textarea.inputfield {height: @input-textarea-height;}
 	-webkit-appearance: none;
 	margin: 0 7px @input-margin-bottom 0;
 	cursor: pointer;
+	
 	&:focus {outline: none; border-color: @input-border-focus; background: @input-bg-focus;}
-	@media (max-width: 599px) {margin-bottom: 0;}
+	
+	// Media
+    @media @mobile {
+    	margin-bottom: 0;
+    }
 }
 .checkbox {
 	.radius;
+	
 	&:checked {background: @input-checkbox-checked no-repeat center center;}
 }
 .radio-button {
 	.radius(50%);
+	
 	&:checked {background: @input-radio-checked no-repeat center center;}
 }
 label {
