--- a/less/ferret.less
+++ b/less/ferret.less
@@ -1,6 +1,6 @@
 /*********************************************
 Ferret Framework Main Stylesheet
-Last Updated: 1/28/13
+Last Updated: 5/1/13
 Written by: Sean Stopnik
 Email: sstopnik@redventures.com
 *********************************************/
@@ -13,6 +13,7 @@ Email: sstopnik@redventures.com
 // Base Styles (Do Not Remove)
 @import "project/ferret/box_grid.less";
 @import "project/ferret/style_fonts.less";
+@import "project/ferret/style_reset.less";
 @import "project/ferret/style_base.less";
 @import "project/ferret/style_typography.less";
 @import "project/ferret/style_mixins.less";
