--- a/less/project/ferret/style_mixins.less
+++ b/less/project/ferret/style_mixins.less
@@ -33,6 +33,20 @@
 }
 
 
+// Scale
+.scale(@scale) {
+	-webkit-transform: scale(@scale);
+    transform: scale(@scale);
+}
+
+
+// Translate
+.translate(@translate) {
+	-webkit-transform: translate(@translate);
+    transform: translate(@translate);
+}
+
+
 // Width and Height
 .size(@size) {
 	width: @size;
