--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -21,6 +21,11 @@
 @link-hover: @dark;
 
 
+// User Select
+@user-select-bg: @dark;
+@user-select-color: @white;
+
+
 // Fonts
 @font-light: 'OpenSansLight';
 @font-normal: 'OpenSansReg';
@@ -30,7 +35,7 @@
 
 
 // Colors
-@blue: #3faab9;
+@blue: #48b2c1;
 @orange: #fdaa4e;
 @red: #f26a4a;
 @green: #50c690;
@@ -139,8 +144,8 @@
 
 
 // Tabs
-@tab-font: @font-normal;
-@tab-font-size: 14px;
+@tab-font: @font-semi;
+@tab-font-size: 12px;
 @tab-font-weight: normal;
 @tab-letter-spacing: 0;
 @tab-bg: #f9f9f9;
