--- a/less/project/ferret/style_base.less
+++ b/less/project/ferret/style_base.less
@@ -1,36 +1,13 @@
 // Base Default Styles
-// Last Updated: 11/11/12
 
 
-/* Reset */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-html {overflow-y: scroll;}
-body {line-height: 1;}
-ol, ul {list-style: none;}
-blockquote, q {quotes: none;}
-blockquote:before, blockquote:after, q:before, q:after {content: ''; content: none;}
-table {border-collapse: collapse; border-spacing: 0;}
-
-
-/* HTML5 Tags */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
-
-
-/* Defaults */
-* {-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
+// Base Defaults
 body {
+	color: @base-color;
 	font-family: @base-font;
 	font-size: @base-font-size;
-	line-height: @base-line-height;
 	font-weight: @base-font-weight;
-	color: @base-color;
+	line-height: @base-line-height;
 	background: @base-bg;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
@@ -42,17 +19,47 @@ hr {
 	background: url(../images/ferret/hr_horizontal.png) repeat-x;
 	margin: 0 10px 40px;
 	padding: 0;
+	
 	&.flush {margin: 0;}
 }
-input, select {vertical-align: middle;}
-input[type=button], input[type=submit], button {cursor: pointer; border: 0; margin: 0; -webkit-appearance: none; outline: none;}
-.bold, b, strong {font-weight: bold;}
-.italic, i {font-style: italic;}
-::-webkit-input-placeholder {color: @placeholder-color;}
-input[type="text"]:-moz-placeholder {color: @placeholder-color;}
-input[type="tel"]:-moz-placeholder {color: @placeholder-color;}
-input[type="email"]:-moz-placeholder {color: @placeholder-color;}
-textarea:-moz-placeholder {color: @placeholder-color;}
-::selection {background: #464646; color: #fff;}
-::-moz-selection {background: #464646; color: #fff;}
-.ie7 img {-ms-interpolation-mode: bicubic;}
+input, select {
+	vertical-align: middle;
+}
+input[type='button'], input[type='submit'], button {
+	cursor: pointer;
+	border: 0;
+	margin: 0;
+	-webkit-appearance: none;
+	outline: none;
+}
+.bold, b, strong {
+	font-weight: bold;
+}
+.italic, i {
+	font-style: italic;
+}
+
+
+// Placeholder
+::-webkit-input-placeholder {
+	color: @placeholder-color;
+}
+input[type='text'], input[type='tel'], 
+input[type='email'], textarea {
+	&:-moz-placeholder {
+		color: @placeholder-color;
+	}
+}
+
+
+// User Select
+::selection, ::-moz-selection {
+	background: @user-select-bg;
+	color: @user-select-color;
+}
+
+
+// IE7 Image Fix
+.ie7 img {
+	-ms-interpolation-mode: bicubic;
+}
