--- a/less/project/ferret/style_buttons.less
+++ b/less/project/ferret/style_buttons.less
@@ -1,6 +1,17 @@
 // Button Default Styles
 
-/* Buttons */
+
+// Buttons
+.btn-bg(@btn-bg: @button-bg, @btn-color: @button-color) {
+	color: @btn-color;
+	text-shadow: 0 1px 0 darken(@btn-bg, 3%);
+	box-shadow: 0 4px 0 darken(@btn-bg, 10%);
+	background-color: @btn-bg;
+	
+	&:hover {
+		background-color: darken(@btn-bg, 5%);
+	}
+}
 .button, a.button {
 	float: left;
 	padding: 0 @button-height - 15;
@@ -9,36 +20,44 @@
 	font-weight: @button-font-weight;
 	font-size: @button-font-size;
 	line-height: @button-height;
-	border-top: 1px solid @button-bg;
-	background: @button-bg;
 	.radius;
-	box-shadow: inset 0 1px 1px rgba(255,255,255,0.3);
-	text-shadow: -1px -1px 0 rgba(0,0,0,0.1);
+	.btn-bg;
 	.transition;
 	-webkit-appearance: none;
 	
 	
 	// Submit Button
 	&.submit {
-		height: @button-height;
-		font-family: @button-font;
-		letter-spacing: @base-letter-spacing;
 		border: 0;
-		border-top: 1px solid @button-submit;
-		background-color: @button-submit;
+		.btn-bg(@btn-bg: @button-submit);
 		margin: 5px 0 0;
 	}
 	
 	
 	// Colors & Variations
-	&.orange {border-top: 1px solid @orange; background-color: @orange;}
-	&.red {border-top: 1px solid @red; background-color: @red;}
-	&.blue {border-top: 1px solid @blue; background-color: @blue;}
-	&.green {border-top: 1px solid @green; background-color: @green;}
-	&.light {border-top: 1px solid @gray; background-color: @gray;}
+	&.orange {
+		.btn-bg(@btn-bg: @orange);
+	}
+	&.red {
+		.btn-bg(@btn-bg: @red);
+	}
+	&.blue {
+		.btn-bg(@btn-bg: @blue);
+	}
+	&.green {
+		.btn-bg(@btn-bg: @green);
+	}
+	&.light {
+		.btn-bg(@btn-bg: @gray);
+	}
 	&.striped {background-image: @striped;}
-	&.flat {box-shadow: none; border: none; text-shadow: none;}
-	&.reverse {border-top: 1px solid @light-gray; background-color: @light-gray; color: @dark; text-shadow: -1px -1px 0 rgba(255,255,255,0.1);}
+	&.flat {
+		text-shadow: none;
+		box-shadow: none;
+	}
+	&.reverse {
+		.btn-bg(@btn-bg: @light-gray, @btn-color: #555);
+	}
 	&.oval {.radius(@button-height / 2);}
 	
 	
@@ -48,11 +67,12 @@
 	&.large {font-size: @button-font-size + 2; line-height: @button-height + 10; padding: 0 @button-height + 5;}
 	&.x-large {font-size: @button-font-size + 4; line-height: @button-height + 20; padding: 0 @button-height;}
 	&.full-width {width: 100%; padding-left: 0; padding-right: 0; text-align: center;}
-	
-	
+
+
 	// Hover
-	&:hover {background-color: @button-hover; border-top: 1px solid @button-hover; color: @button-color;}
-	&.flat:hover {border: none;}
+	&:hover {
+		
+	}
 }
 input[type='submit'].button {
 	height: @button-height;
