--- a/less/project/ferret/style_tabs.less
+++ b/less/project/ferret/style_tabs.less
@@ -6,7 +6,12 @@ ul.tabs-nav {
     width: 100%;
     border-bottom: 1px solid @tab-border-color;
     margin: 5px 0 20px;
-    @media (max-width: 599px) {border: none;}
+    
+    // Media
+    @media @mobile {
+    	border: none;
+    }
+    
     li {
 	    float: left;
 	    padding: 6px @tab-spacing;
@@ -14,10 +19,12 @@ ul.tabs-nav {
 	    background: @tab-bg;
 	    margin: 0 -1px -1px 0;
 	    .transition;
+	    
 	    &:hover {
 	    	cursor: pointer;
 	    	a {color: @tab-color-hover;}
 	    }
+		
 		a {
 		    display: block;
 		    color: @tab-color;
@@ -26,23 +33,32 @@ ul.tabs-nav {
 	    	font-weight: @tab-font-weight;
 	    	line-height: 1.9;
 	    	letter-spacing: @tab-letter-spacing;
+	    	
 	    	&:hover {color: @tab-color-hover;}
 	    }
+	    
 	    &.active {
 		    padding-top: 9px;
 		    border-bottom: 1px solid @tab-frame-bg;
 		    margin-top: -3px;
 		    background: @tab-frame-bg;
+		    
 		    a {color: @tab-color-active;}
 		}
-		@media (max-width: 599px) {
+		
+		// Media
+		@media @mobile {
 			border: none;
     		border-right: 1px solid @tab-border-color;
     		padding: 2px 12px;
     		background: none;
+    		
     		&:first-child {padding-left: 0;}
+    		
     		&:last-child {padding-right: 0; border: none;}
+    		
     		&.active {padding-top: 2px; margin-top: 0; background: none;}
+    		
     		a {font-size: 90%;}
 		}
     }
